[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sound/bgmusic.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Images/background/frame_0_delay-s.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Font/RubikMonoOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Menu/Menu_btn.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 10
outline_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
use_filter = true
extra_spacing_bottom = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 3
border_width_top = 10
border_width_right = 10
border_width_bottom = 2
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
size = 30
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 3
border_width_top = 10
border_width_right = 10
border_width_bottom = 2
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 30
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 3
border_width_top = 10
border_width_right = 10
border_width_bottom = 2
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=8]
size = 30
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 3
border_width_top = 10
border_width_right = 10
border_width_bottom = 2
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -170.0
margin_right = 512.0
margin_bottom = 300.0

[node name="Label PackagingProcess" type="Label" parent="MenuContainer"]
margin_right = 1024.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "PACKAGING PROCESS"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -42.0
margin_right = 111.0
margin_bottom = 170.0

[node name="start_btn" type="Button" parent="VBoxContainer"]
margin_right = 221.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "start"
script = ExtResource( 5 )

[node name="about_btn" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 221.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "About"
script = ExtResource( 5 )

[node name="guide_btn" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 221.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Guide"
script = ExtResource( 5 )

[node name="exit_btn" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 221.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Exit"
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/start_btn" to="VBoxContainer/start_btn" method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/about_btn" to="VBoxContainer/about_btn" method="_on_about_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/guide_btn" to="VBoxContainer/guide_btn" method="_on_guide_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_btn" to="VBoxContainer/exit_btn" method="_on_exit_btn_pressed"]
